[gd_scene load_steps=4 format=3 uid="uid://b88pn40s68r1o"]

[ext_resource type="Script" path="res://picture_node.gd" id="1_uhp4a"]
[ext_resource type="PackedScene" uid="uid://bv0cspqo5kmjf" path="res://example_picture_window.tscn" id="2_6ex7v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b2huh"]
resource_local_to_scene = true
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.521569, 0, 0.00784314, 1)
shadow_color = Color(0, 0, 0, 0.188235)
shadow_size = 2
shadow_offset = Vector2(5, 5)
anti_aliasing = false

[node name="PictureNode" type="GraphNode" groups=["graph_nodes"]]
offset_right = 347.0
offset_bottom = 249.0
title = "Picture Node"
position_offset = Vector2(20, 800)
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color(0.211765, 0.960784, 0.211765, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color(1, 0, 0.968627, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_uhp4a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PreviewButton" type="CheckButton" parent="VBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Preview"

[node name="ClearButton" type="Button" parent="VBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="PreviewRect" type="TextureRect" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OpenButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Open"

[node name="PicturePath" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Picture Path"
editable = false

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SizeLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Box Size"
vertical_alignment = 1

[node name="SizeXSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
allow_greater = true
alignment = 3
editable = false
prefix = "x:"
select_all_on_focus = true

[node name="SizeYSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
allow_greater = true
alignment = 3
editable = false
prefix = "y:"
select_all_on_focus = true

[node name="ResetSizeButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
visible = false
layout_mode = 2
disabled = true
text = "Reset"

[node name="KeepAspectBox" type="CheckBox" parent="VBoxContainer/HBoxContainer3"]
visible = false
layout_mode = 2
disabled = true
button_pressed = true
text = "Keep Aspect"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PositionLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Position"
vertical_alignment = 1

[node name="PosXSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
allow_greater = true
alignment = 3
prefix = "x:"
select_all_on_focus = true

[node name="PosYSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
allow_greater = true
alignment = 3
prefix = "y:"
select_all_on_focus = true

[node name="CenterXCheck" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Center X"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ShowExampleBox" type="CheckButton" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Show Example Box"

[node name="ExamplePictureWindow" parent="." instance=ExtResource("2_6ex7v")]
visible = false
layout_mode = 2

[node name="PictureContainer" parent="ExamplePictureWindow" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_b2huh")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(700, 500)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.png, *.jpg, *.jpeg, *.svg, *.webp")

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="position_changed" from="." to="." method="_on_position_changed"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="toggled" from="VBoxContainer/CenterContainer2/HBoxContainer/PreviewButton" to="." method="_on_preview_button_toggled"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/SizeXSpinBox" to="." method="_on_size_x_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/SizeYSpinBox" to="." method="_on_size_y_spin_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/ResetSizeButton" to="." method="_on_reset_size_button_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer3/KeepAspectBox" to="." method="_on_keep_aspect_box_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/PosXSpinBox" to="." method="_on_pos_x_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/PosYSpinBox" to="." method="_on_pos_y_spin_box_value_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/CenterXCheck" to="." method="_on_center_x_check_toggled"]
[connection signal="toggled" from="VBoxContainer/CenterContainer/ShowExampleBox" to="." method="_on_show_example_box_toggled"]
[connection signal="dragged" from="ExamplePictureWindow/PictureContainer" to="." method="_on_picture_container_dragged"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]

[editable path="ExamplePictureWindow"]
